--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
+    "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^2.0.0",
