--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "axios-cache-plugin": "^0.1.0",
     "babel-jest": "^26.6.3",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^2.0.0",
@@ -20,6 +22,7 @@
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
@@ -27,10 +30,11 @@
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "start": "webpack --watch --mode=development",
+    "start": "webpack serve --open --mode=production",
     "build": "webpack --mode=production",
     "jsonServer": "json-server --watch db.json"
   }
