--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-jest": "^26.6.3",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^2.0.0",
+    "express": "^4.17.1",
     "jest": "^26.6.3",
     "json-server": "^0.16.3",
     "node-fetch": "^2.6.1",
@@ -34,7 +35,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "start": "webpack serve --open --mode=production",
+    "starts": "node index.js",
+    "dev": "webpack serve --open --mode=production",
     "build": "webpack --mode=production",
     "jsonServer": "json-server --watch db.json"
   }
